<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">"Username "</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="sign_up_error_message">Please make sure you enter your username, password and email address.</string>
    <string name="sign_up_error_title">Oops!!</string>
    <string name="login_error_message">Please make sure you enter your username, password.</string>
    <string name="login_error_title">Oops!!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No messages to display </string>
    <string name="empty_friend_label">Add friends </string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">Sorry</string>
    <string name="menu_camera_label">Camera</string>

    <string-array name="camera_choices">
        <item>Take Picture </item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="error_external_storage">There was a problem accessing your devices\'s external storage</string>
    <string name="general_error">Sorry there was an error!!</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB.</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="error_file_size_too_large">The selected file was too large. Select a new file.</string>
    <string name="title_activity_recepient">Choose Recipient</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_action_send_label">Send</string>
    <string name="error_sending_message">There was a problem sending the message.Please try again</string>
    <string name="error_label_dialog">Sorry</string>
    <string name="error_creating_message">There was a problem creating the message.Please try again</string>
    <string name="message_sent">Message sent</string>
    <string name="title_activity_view_image">View Image</string>
    <string name="ribbit_background_image">Ribbit Background Image</string>
    <string name="subtitle">Project By Akash Pal</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="pushMessage">New Ribbit Message from %s!</string>

</resources>