<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.akashpal.ribbit.ui.SignUpActivity" >

    
    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubTitle" />
    
    
    <LinearLayout
        android:id="@+id/textViews"
        style="@style/AuthFields" >

        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthEditText"
            android:hint="@string/username_hint" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/emailField"
            style="@style/AuthEditText"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <ImageView 
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViews"
        android:src="@drawable/button_divider"/>
    
    <Button
        android:id="@+id/signupButton"
        style="@style/AuthButton"
        android:text="@string/sign_up_button_label"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_marginRight="0dp" />

    <Button
        android:id="@+id/candelButton"
        style="@style/AuthButton"
        android:text="@string/cancel_button_label"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_marginLeft="0dp" />
    
</RelativeLayout>